# minimal_norm_calculator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  collect_code.sh  download_hadamard.sh  full_code.txt  gui.py
include/: ChebyshevInitializer.h  DiscreteNormCalculator.h  Domain.h  HypercubeDomain.h  IBasis.h  IInitializer.h  INormCalculator.h  IOptimizer.h  IntervalDomain.h  LagrangeBasis.h  NelderMeadOptimizer.h  RandomInitializer.h  SimplexBasis.h  SimplexDomain.h  TensorProductBasis.h  UniformInitializer.h
include/basis/: HadamardSimplex.h  IBasis.h  LagrangeBasis.h  LagrangeBasis1D.h  LagrangeBasisGeneral.h  SimplexBasis.h  TensorProductBasis.h
include/calculator/: DiscreteNormCalculator.h  INormCalculator.h
include/cli/: CommandLineParser.h  DomainType.h  ProgramOptions.h
include/cli/commands/: Command.h  ComputeCommand.h  OptimizeCommand.h
include/compute/: HypercubeCompute.h  IntervalCompute.h  SimplexCompute.h
include/domain/: Domain.h  HypercubeDomain.h  IntervalDomain.h  SimplexDomain.h
include/factory/: BasisFactory.h  DomainFactory.h  InitializerFactory.h  SimplexProviderFactory.h
include/hadamard_utils/: HadamardMatrixIterator.h  HadamardUtils.h
include/initializer/: ChebyshevInitializer.h  FeketeInitializer.h  IInitializer.h  RandomInitializer.h  UniformInitializer.h
include/io/: HadamardFileProvider.h  ISimplexProvider.h  Processing.h  SilvesterMethodProvider.h  SilvesterSimplexProvider.h  SimplexFileProvider.h  SimplexProviderFactory.h
include/optimizer/: DirectCalculator.h  GoogleOrToolsOptimizer.h  HillClimbingOptimizer.h  INormOptimizer.h  IOptimizer.h  LebesgueFunction.h  NelderMeadOptimizer.h  NormOptimizer.h
include/processing/: Processing.h
include/provider/: HadamardFileProvider.h  ISimplexProvider.h  Processing.h  SilvesterMethodProvider.h  SimplexFileProvider.h
include/upper_bound_calculator/: FullEnumUpperBoundCalculator.h  LebesgueFunction.h  UpperBoundCalculatorInterface.h
include/util/: Vector.h
include/utils/: HadamardMatrixIterator.h  HadamardUtils.h
include/vertices_provider/: HadamardFileProvider.h  SilvesterMethodProvider.h  SimplexProviderFactory.h
latex/: main.tex  my_libs.bib  source_code_cpp.tex  source_code_headers.tex
latex/by_parts/: 0_main.tex  1_code_structure.tex  2_source_code_headers.tex  3_source_code_cpp.tex  by_parts.tex  main.tex
latex/full/: full_text.tex  full_text_Zaikov_I_V.tex  my_libs.bib
latex/utils/: source_code_cpp.tex
preset/: test_Hadamar_16.txt  test_Hadamar_16_all.txt  test_Hadamar_16_symbolic.txt  test_Hadamar_2.txt  test_Hadamar_20_all.txt  test_Hadamar_24_all.txt  test_Hadamar_28_all.txt  test_Hadamar_32.txt  test_Hadamar_4.txt  test_hadamard_32_all.txt
src/: ChebyshevInitializer.cpp  DiscreteNormCalculator.cpp  HypercubeDomain.cpp  IntervalDomain.cpp  LagrangeBasis.cpp  NelderMeadOptimizer.cpp  RandomInitializer.cpp  SimplexBasis.cpp  SimplexDomain.cpp  TensorProductBasis.cpp  UniformInitializer.cpp  main.cpp
src/basis/: HadamardSimplex.cpp  LagrangeBasis.cpp  LagrangeBasis1D.cpp  LagrangeBasisGeneral.cpp  SimplexBasis.cpp  TensorProductBasis.cpp
src/calculator/: DiscreteNormCalculator.cpp
src/cli/: Command.cpp  CommandLineParser.cpp  DomainType.cpp
src/cli/commands/: ComputeCommand.cpp  OptimizeCommand.cpp
src/compute/: HypercubeCompute.cpp  IntervalCompute.cpp  SimplexCompute.cpp
src/domain/: HypercubeDomain.cpp  IntervalDomain.cpp  SimplexDomain.cpp
src/factory/: BasisFactory.cpp  DomainFactory.cpp  InitializerFactory.cpp  SimplexProviderFactory.cpp
src/hadamard_utils/: HadamardMatrixIterator.cpp  HadamardUtils.cpp
src/initializer/: ChebyshevInitializer.cpp  FeketeInitializer.cpp  NelderMeadOptimizer.cpp  RandomInitializer.cpp  UniformInitializer.cpp
src/io/: HadamardFileProvider.cpp  Processing.cpp  SilvesterMethodProvider.cpp  SilvesterSimplexProvider.cpp  SimplexFileProvider.cpp  SimplexProviderFactory.cpp
src/optimizer/: DirectCalculator.cpp  FullEnumUpperBoundCalculator.cpp  GoogleOrToolsOptimizer.cpp  HillClimbingOptimizer.cpp  LebesgueFunction.cpp  NelderMeadOptimizer.cpp  NormOptimizer.cpp
src/processing/: Processing.cpp
src/provider/: HadamardFileProvider.cpp  Processing.cpp  SilvesterMethodProvider.cpp  SimplexFileProvider.cpp
src/upper_bound_calculator/: FullEnumUpperBoundCalculator.cpp  LebesgueFunction.cpp
src/utils/: HadamardMatrixIterator.cpp  HadamardUtils.cpp
src/vertices_provider/: HadamardFileProvider.cpp  Processing.cpp  SilvesterMethodProvider.cpp  SimplexProviderFactory.cpp
